# litime-ble

./: .gitignore  COPYRIGHT.txt  LICENSE.txt  dump_gatt.py  litime_reader.py  litime_scan.py  probe.py  probe2.py  project_overview.md  pyproject.toml  requirements.txt  scan.py
docs/: README.md  goals.md  index.md  legal-notes.md  packet-format.md  protocol.md  python-reader.md  reverse-engineering-notes.md  victron-integration.md
gbl_litime_ble/: __init__.py
litime_ble/: __init__.py  cli.py  protocol.py  reader.py  scanner.py
tests/: test_protocol.py
tools/: check_fixture.py  compute_packet.py  compute_packet_expected.py  packet_values.py
